--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-handlebars": "^3.0.0",
     "mongodb": "^2.2.20",
     "morgan": "^1.7.0",
-    "serve-favicon": "^2.3.2"
+    "serve-favicon": "^2.3.2",
+    "socket.io": "^1.7.2"
   }
 }
