--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.6",
     "mongodb": "^2.2.21",
     "morgan": "^1.7.0"
   }
